--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "@radix-ui/react-checkbox": "^1.0.2",
+    "highcharts": "^10.3.3",
+    "highcharts-react-official": "^3.2.0",
     "phosphor-react": "^1.4.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
